Final version: full app with PDF generation, risk assessments, KVKK encryption, worker management, and all features

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,12 @@ __pycache__/
 *.pyc
 db.sqlite3
 .env
+venv/
+.DS_Store
+*.log
+tmp_uploads/
+debug_*.py
+server.log
+.vscode/
+.agent/
+static/admin/
